<resources>
    <string name="app_name">Turtle Riot</string>
    <string name="txt_tvPText1">TURTLE RIOT</string>
    <string name="txt_tvPText2">JOIN THE ECO-ARMY !</string>
    <string name="txt_btnSignIn">Conectar</string>
    <string name="txt_tvCuenta">No tienes cuenta?</string>
    <string name="txt_tvNuevaCuenta">Crear Cuenta</string>
    <string name="hint_etRegUserNombre">Nombre Usuario</string>
    <string name="hint_etRegCorreoNombre">Correo electronico</string>
    <string name="hint_loginUser">Nombre o correo</string>

    <string name="txt_btnRegistrar">Registrar</string>
    <string name="title_activity_portada_manu"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_usuario">Usuario</string>
    <string name="nev_gotos">Fotos playas</string>
    <string name="vc_congif">Configuracion</string>
    <string name="com">Compartir</string>
    <string name="Compartir" />
    <string name="vc_com">Compartir</string>
    <string name="texBienbenido">Bienvenido</string>
    <string name="txt_tvAcciones">Acciones</string>
    <string name="txt_tvAdvertencia">Advertencia</string>
    <string name="txt_tvPlayas">Playas</string>
    <string name="txt_tvIr">Ir</string>
    <string name="toast_verifData">Los datos deben ser rellenables</string>
    <string name="toast_no_accede">Usuario no identificado</string>
    <string name="REG_USUARIO" />
    <string name="toast_CreateUserSucefully">Cuenta creada</string>

    <string name="txt_tvBuscarAcciones">Buscar Acciones</string>
    <string name="txt_tvAccionesSeguidos">Acciones Seguidos</string>
    <string name="txt_tvCrearAcciones">Crear Acciones</string>
    <string name="txt_tvAdministrarAcciones">Administrar Acciones</string>
    <string name="txt_tvClima">Clima</string>
    <string name="txt_tvFauna">Fauna</string>
    <string name="txt_tvContaminacion">Contaminacion</string>
    <string name="txt_tvBanderas">Banderas</string>
    <string name="txt_tvCalificacion">Calificacion</string>
    <string name="txt_tvBuscarACC">Buscar Acciones</string>
    <string name="txt_tvTituloACC">TITULO:</string>
    <string name="txt_tvFotoACC">FOTO</string>
    <string name="txt_tvPlayaACC">PLAYA</string>
    <string name="txt_tvFechaACC">FECHA:</string>
    <string name="txt_tvDescripcionACC">DESCRIPCION:</string>
    <string name="toast_AccionVacio">Los campos deben ser rellenables</string>

    <string name="txt_tvPlayaTitle">Playa:</string>
    <string name="txt_tvPropietarioTitle">Propietario:</string>
    <string name="txt_tvUsuariosSeguidos">Usuarios Seguidos</string>
    <string name="fecha_datos">dd/mm/yyyy</string>
    <string name="hora_datos">hh:mm</string>
    <string name="title_activity_config_user">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_portada_menu">PortadaMenuActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
