<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlInfoAcciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoAccionesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloACC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvTituloACC"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPlayaACC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvPlayaACC"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivFotoACC"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/images" />

            <TextView
                android:id="@+id/tvDescripcionACC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et_top"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvDescripcionACC" />

            <TextView
                android:id="@+id/tvFechaACC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et_top"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvFechaACC" />

            <TextView
                android:id="@+id/tvUsuariosSeguidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et_top"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvUsuariosSeguidos"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvListaUsuariosSeguidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/ivBotonGuardar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/tortuga_guardar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>