<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flPantallaInicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.turtleriot.PantallaInicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_fondo"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLOGOSplash"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvTITULO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/armalite"
            android:text="@string/txt_tvPText2"
            android:textAlignment="center"
            android:textColor="@color/textColor_Whiite"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_et_top"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imLogoUser"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logousuarios" />

                <EditText
                    android:id="@+id/etLoginUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/hint_loginUser"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textColor_Whiite"
                    android:textColorHint="@color/color_hint" />

                <ImageView
                    android:id="@+id/imLogoPasswd"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logocontrasennia" />

                <EditText
                    android:id="@+id/etLoginPasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor_Whiite"
                    android:textColorHint="@color/color_hint" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et_top"
                android:background="@color/color_btnSignIn"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_btnSignIn"
                android:textColor="@color/textColor_Whiite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach_thin"
                    android:text="@string/txt_tvCuenta"
                    android:textAlignment="textEnd"
                    android:textColor="@color/textColor_Whiite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvNuevaCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach_thin"
                    android:text="@string/txt_tvNuevaCuenta"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor_Whiite"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlCargando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim">

        <ProgressBar
            android:id="@+id/pbCargando"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</FrameLayout>