<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCrearAcciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_fondo2"
    tools:context=".acciones.CrearAccionesActivity">

    <LinearLayout
        android:id="@+id/llCrearSeguidos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llCrearSeguidos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAccionesSeguidos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/padding_imagen"
                android:src="@drawable/btn_crear_acciones" />

            <TextView
                android:id="@+id/tvAccionesSeguidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/life_s_a_beach"
                android:text="@string/txt_tvCrearAcciones"
                android:textSize="18sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scCrearAcciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llCrearAcciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilTituloACC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/life_s_a_beach"
                        android:hint="@string/txt_tvTituloACC"
                        android:textColorHint="@color/color_txt_crearAcciones"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_fondo2">

                        <TextView
                            android:id="@+id/tvFotoACC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/life_s_a_beach"
                            android:text="@string/txt_tvFotoACC"
                            android:textColor="@color/color_txt_crearAcciones"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/ivFotoACC"
                            android:layout_width="190dp"
                            android:layout_height="180dp"
                            android:src="@drawable/images" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_fondo2">

                        <TextView
                            android:id="@+id/tvPlayaACC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/life_s_a_beach"
                            android:text="@string/txt_tvPlayaACC"
                            android:textColor="@color/color_txt_crearAcciones"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/ivPlayaACC"
                            android:layout_width="match_parent"
                            android:layout_height="121dp"
                            android:src="@drawable/btn_flag" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_fondo2">

                    <ImageButton
                        android:id="@+id/ib_obtener_fecha"
                        android:layout_width="170dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/et_mostrar_fecha_picker"
                        android:layout_width="354dp"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/life_s_a_beach"
                        android:text="@string/fecha_datos"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_fondo2">

                    <ImageButton
                        android:id="@+id/ib_obtener_hora"
                        android:layout_width="7dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/alarm" />

                    <TextView
                        android:id="@+id/et_mostrar_hora_picker"
                        android:layout_width="192dp"
                        android:layout_height="49dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/life_s_a_beach"
                        android:text="@string/hora_datos"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilDescripcionACC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/life_s_a_beach"
                        android:hint="@string/txt_tvDescripcionACC"
                        android:textColorHint="@color/color_txt_crearAcciones"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivCrearAcciones"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:padding="@dimen/padding_fondo2"
                    android:src="@drawable/tortuga_ok" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>