<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flAdvertencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.turtleriot.AdvertenciaFragment">


    <ScrollView
        android:id="@+id/scAdvertencia"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llAdvertencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llClima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_ll"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivClima"
                    android:layout_width="15dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_clima" />

                <TextView
                    android:id="@+id/tvClima"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach"
                    android:text="@string/txt_tvClima"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFauna"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_bottom_ll"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivFauna"
                    android:layout_width="15dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_fauna" />

                <TextView
                    android:id="@+id/tvFauna"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach"
                    android:text="@string/txt_tvFauna"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContaminacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_bottom_ll"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivContaminacion"
                    android:layout_width="15dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_pollution" />

                <TextView
                    android:id="@+id/tvContaminacion"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach"
                    android:text="@string/txt_tvContaminacion"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBanderas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_bottom_ll"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBanderas"
                    android:layout_width="15dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_flag" />

                <TextView
                    android:id="@+id/tvBanderas"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach"
                    android:text="@string/txt_tvBanderas"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCalificacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_bottom_ll"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCalificacion"
                    android:layout_width="15dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/btn_calification" />

                <TextView
                    android:id="@+id/tvCalificacion"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_et_left"
                    android:layout_weight="1"
                    android:fontFamily="@font/life_s_a_beach"
                    android:text="@string/txt_tvCalificacion"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>